# devops-phe-alarms-lambdas

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md
.github/workflows/: pr.yml  release.yml
.github/workflows/scripts/: deploy-lambdas.sh  functions.sh  unit-tests.sh
lambdas/cloudwatch_alerts_to_teams/: pyproject.toml  requirements.txt
lambdas/cloudwatch_alerts_to_teams/app/: __init__.py  main.py
lambdas/cloudwatch_alerts_to_teams/tests/fixtures/: event-firing.json  event-ok.json
lambdas/cloudwatch_alerts_to_teams/tests/unit/: test_main.py
